# slipstream

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  slipstream.mid
.beads/: issues.jsonl
.claude/: hookify.handoff-request.local.md
.github/workflows/: pages.yml  release.yml
crates/slipstream-cli/: Cargo.toml
crates/slipstream-cli/src/: client.rs  format.rs  lib.rs  main.rs  parse.rs
crates/slipstream-cli/src/shim/: cat.rs  common.rs  head.rs  mod.rs  sed.rs  tail.rs
crates/slipstream-cli/tests/: cli_e2e.rs  shim_e2e.rs
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: buffer.rs  client.rs  edit.rs  flush.rs  format.rs  lib.rs  manager.rs  parse.rs  session.rs  str_match.rs
crates/slipstream-daemon/: Cargo.toml
crates/slipstream-daemon/src/: coordinator.rs  fcp_bridge.rs  handler.rs  lib.rs  main.rs  plugin_manager.rs  protocol.rs  registry.rs  types.rs
crates/slipstream-daemon/tests/: e2e.rs
crates/slipstream-mcp/: Cargo.toml
crates/slipstream-mcp/src/: lib.rs  main.rs  params.rs  parse.rs  server.rs
crates/slipstream-mcp/tests/: mcp_e2e.rs
docs/: benchmark-h2h.sh  benchmark-setup.py  benchmark.py
docs/benchmarks/h2h-scale/: old-prompt.md  prompts.md  results.md  setup.py
docs/benchmarks/h2h-small/: benchmark.py  results.md  spa-build-prompt.md
docs/benchmarks/stress-test/: prompt.md
docs/brandkit/: slipstream-brand-kit.html  slipstream-brand-prompt-v2.md
docs/plans/: 2026-02-08-slipstream-design.md  2026-03-02-file-session-coordinator.md  2026-03-06-cwd-path-resolution.md
docs/prompts/: h2h-scale-test.md
docs/reports/: stress-test-results.md  stress-test-retrospective.md  workflow-test-results.md
sessions/decompose-20260302-004100/: 01_understanding.md  02_manifest.md  03_beads_created.md  04_dependencies.md  05_validation.md
site/: CNAME  index.html  install.sh
