[package]
name = "slipstream-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "slipstream"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
thiserror = "2"
slipstream-core = { path = "../slipstream-core" }
slipstream-daemon = { path = "../slipstream-daemon" }
slipstream-mcp = { path = "../slipstream-mcp" }

[dev-dependencies]
slipstream-core = { path = "../slipstream-core" }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full", "test-util"] }
