[package]
name = "slipstream-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
dashmap = "6"
tempfile = "3"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt", "time"] }
